Call blocking events on virtual threads